--- a/package.json
+++ b/package.json
@@ -12,12 +12,15 @@
   },
   "dependencies": {
     "contentful": "^5.0.5",
+    "firebase": "^4.8.1",
     "node-sass": "^4.7.2",
     "sass-loader": "^6.0.6",
     "vue": "^2.5.2",
+    "vue-markdown": "^2.2.4",
     "vue-meta": "^1.4.0",
     "vue-on-click-outside": "^1.0.3",
     "vue-router": "^3.0.1",
+    "vuefire": "^1.4.5",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
