--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "vue-on-click-outside": "^1.0.3",
     "vue-router": "^3.0.1",
     "vuefire": "^1.4.5",
-    "vuex": "^3.0.1"
+    "vuex": "^3.0.1",
+    "vuexfire": "^2.3.0"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.5",
