--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "vue-meta": "^1.4.0",
     "vue-on-click-outside": "^1.0.3",
     "vue-router": "^3.0.1",
+    "vue-tiny-slider": "^0.1.8",
     "vuefire": "^1.4.5",
     "vuex": "^3.0.1",
     "vuexfire": "^2.3.0"
