--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^0.17.1",
     "contentful": "^5.0.5",
     "firebase": "^4.8.1",
+    "lodash": "^4.17.4",
     "node-sass": "^4.7.2",
     "sass-loader": "^6.0.6",
     "vue": "^2.5.2",
