--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,4 @@
 [[headers]]
     for = "/*"
     [headers.values]
-        X-Frame-Options = "DENY"
-        X-XSS-Protection = "1; mode=block"
-        Content-Security-Policy = "frame-ancestors https://www.facebook.com"
+        Content-Security-Policy: frame-ancestors https://www.facebook.com;
