--- a/netlify.toml
+++ b/netlify.toml
@@ -1,4 +1,4 @@
 [[headers]]
     for = "/*"
     [headers.values]
-        Content-Security-Policy: frame-ancestors https://www.facebook.com;
+        Content-Security-Policy: frame-ancestors https://www.facebook.com
