--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "sass-loader": "^6.0.6",
     "vue": "^2.5.2",
     "vue-markdown": "^2.2.4",
+    "vue-meta": "^1.4.2",
     "vue-on-click-outside": "^1.0.3",
     "vue-router": "^3.0.1",
     "vue-tiny-slider": "^0.1.8",
