--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "vue-meta": "^1.4.2",
     "vue-on-click-outside": "^1.0.3",
     "vue-router": "^3.0.1",
+    "vue-server-renderer": "^2.5.13",
     "vue-tiny-slider": "^0.1.8",
     "vuefire": "^1.4.5",
     "vuex": "^3.0.1",
