--- a/package.json
+++ b/package.json
@@ -17,13 +17,13 @@
     "instafeed.js": "^1.4.1",
     "lodash": "^4.17.4",
     "node-sass": "^4.7.2",
+    "prerender-spa-plugin": "^2.1.0",
     "sass-loader": "^6.0.6",
     "vue": "^2.5.2",
     "vue-markdown": "^2.2.4",
     "vue-meta": "^1.4.2",
     "vue-on-click-outside": "^1.0.3",
     "vue-router": "^3.0.1",
-    "vue-server-renderer": "^2.5.13",
     "vue-tiny-slider": "^0.1.8",
     "vuefire": "^1.4.5",
     "vuex": "^3.0.1",
